--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <p>This is the first file in my new Git Repo.</p>
 <p>a new line</p>
 <p>a second line</p>
+<p>This line is here to show how merging works.</p>
+
 
 </body>
 </html>
