added new image

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@ style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>a new line</p>
 <p>a second line</p>
+<div><img src="astronet2.jpeg" alt="Hello World from Space"
+style="width:100%;max-width:640px"></div>
 
 </body>
 </html>
