updated index.html, added another line

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ style="width:100%;max-width:960px"></div>
 <p>a new line</p>
 <p>a second line</p>
 <p>This line is here to show how merging works.</p>
+<p> make some change locally and push to remote repo</p>
 <div><img src="astronet2.jpeg" alt="Hello World from Space"
 style="width:100%;max-width:640px"></div>
 
